add migration status
